[package]
name = "fns-api-client"
version = "0.4.0"
edition = "2021"
description = "ФНС API клиент"
license = "MIT OR Apache-2.0"
repository = "https://github.com/averichev/fns-api-client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.12.0"
yaserde = "0.10.0"
yaserde_derive = "0.10.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = {version = "1.0.114", features = ["default"]}
validator = { version = "0.18.0", features = ["derive"] }
chrono = {version = "0.4.37"}
